switched to bootstrap navbar, fixed search bar size on mobile

--- a/src/components/layout/MainNavagation.module.css
+++ b/src/components/layout/MainNavagation.module.css
@@ -6,6 +6,10 @@
     align-items: center;
 }
 
+.navColor {
+    background-color: #d0d0d0;
+}
+
 .links {
     display: flex;
     align-items: center;
